# kraken-producer

./: Cargo.toml  Dockerfile  README.md  clusterissuer.yaml  deploy.yaml  expose_amqp.yaml  rabbitmq.yaml  rabbitmq_secret.yaml
src/: main.rs
