[package]
name = "kraken_rust_producer"
version = "0.1.0"
edition = "2021"

[dependencies]
amqprs = { version = "1.6.0", features = ["tls"] }
env_logger = "0.11.3"
log = "0.4.21"
serde_json = "1.0.116"
tokio = { version = "1.37.0" , features = ["full"] }
websocket = "0.27.1"
openssl = { version = "0.10.59", features = ["vendored"] }
chrono = "0.4.38"
